--- a/app/views/messages/_chat-side-top.html.haml
+++ b/app/views/messages/_chat-side-top.html.haml
@@ -4,5 +4,5 @@
   .chat__side--top--icon
     =link_to  do
       = fa_icon 'pencil-square-o' ,class: 'icon1';
-    =link_to  do
+    = link_to edit_user_path(current_user) do
       = fa_icon 'cog',class:'icon2';
