--- a/app/views/messages/_chat-main-messages.html.haml
+++ b/app/views/messages/_chat-main-messages.html.haml
@@ -1,5 +1,5 @@
 .chat__main--messages--name
-  Ren
+  = current_user.name
 .chat__main--messages--time
   1999/10/30 17:30:00
 .chat__main--messages--text
