--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,9 @@
 @import "./reset";
-@import "messages";
+// @import "messages";
 @import "font-awesome";
 @import "variable";
 @import "chat";
 @import "modules/user";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/group";
