--- a/app/views/messages/_chat-side-top.html.haml
+++ b/app/views/messages/_chat-side-top.html.haml
@@ -2,7 +2,7 @@
   .chat__side--top--username
     Ren
   .chat__side--top--icon
-    =link_to  do
+    = link_to new_group_path do
       = fa_icon 'pencil-square-o' ,class: 'icon1';
     = link_to edit_user_path(current_user) do
       = fa_icon 'cog',class:'icon2';
