--- a/app/views/messages/_chat-side-top.html.haml
+++ b/app/views/messages/_chat-side-top.html.haml
@@ -1,6 +1,6 @@
 .chat__side--top
   .chat__side--top--username
-    Ren
+    = current_user.name
   .chat__side--top--icon
     = link_to new_group_path do
       = fa_icon 'pencil-square-o' ,class: 'icon1';
