--- a/app/views/messages/_chat-side-group.html.haml
+++ b/app/views/messages/_chat-side-group.html.haml
@@ -4,4 +4,4 @@
       .chat__side--group--name
         = group.name
       .chat__side--group--messages
-        メッセージはまだありません。
+        = group.show_last_message
