--- a/app/assets/stylesheets/_chat.scss
+++ b/app/assets/stylesheets/_chat.scss
@@ -9,7 +9,7 @@
 &__side{
   height: 100%;
   width: 300px;
-
+ 
   &--top{
     height: 100px;
     width: 100%;
@@ -63,7 +63,7 @@
     position:relative;
     top:-100vh;
     margin-left:300px;
-  
+    
   &--header{
     height: 100px;
     width: 100%;
@@ -107,30 +107,36 @@
   &--messages{
     height: 100px;
     width: 100%;
-    
-    
-    
-    &--name{
-      color: $main-character-m;
-      font-size: 16px;
-      font-weight: bold;
-      padding-top: 46px;
-      padding-left: 40px;
+    position: relative;
+   
+    &--box{
+      width:100%;
+      height:40px;
+      position: relative;
       
-    }
-    &--time{
-      font-size: 12px;
-      color: $main-character-s;
-      padding-top: 46px;
-      padding-left: 10px;   
+      &--name{
+        color: $main-character-m;
+        font-size: 16px;
+        font-weight: bold;
+        padding-top: 46px;
+        padding-left: 40px;
+        position: relative;
+      }
+      &--time{
+        position: absolute;
+        bottom: 0px;
+        font-size: 12px;
+        color: $main-character-s;
+        right: 930px;   
 
-    }
-    &--text{
-      font-size: 14px;
-      color: $main-character-m;
-      position: absolute;
-      padding-left: 40px;
-      padding-top: 78px;
+      }
+      &--text{
+        font-size: 14px;
+        color: $main-character-m;
+        position: relative;
+        top:10px;
+        left: 40px;
+      }
     }
   }
   &--footer{
@@ -150,19 +156,9 @@
       font-size: 16px;
       color:  $main-character-s;
       
-    &--form{}
-      &--picture{
-        .icon3{
-          color:#434a54;
-          
-          margin-top: 20px;
-          margin-right:10px;
-          }
-        }
+    &--form{
       
-    }
-    
-    &--send{
+      &--send{
         background-color: $main-header;
         color: white;
         font-size: 16px;
@@ -170,17 +166,29 @@
         width: 90px;
         line-height: 50px;
         text-align: center;
-        margin-left: 1005px;
-        margin-top:20px;
         cursor: pointer;
-        }
+      
+      }
+  
    
+    }
+      }
       }
   
   } 
 }
 .filesend{
   display: none;
+}
+
+.new_message{
+  display: flex;
+}
+
+.icon3{
+  position: absolute;
+  top: 40px;
+  left: 950px;
 }
 
 
