--- a/app/views/messages/_chat-main-messages.html.haml
+++ b/app/views/messages/_chat-main-messages.html.haml
@@ -1,4 +1,4 @@
-.chat-main-messages-box
+.chat-main-messages-box{"data-message-id": "#{message.id}"}
   .chat__main--messages--box--name
     = message.user.name
     .chat__main--messages--box--time
